--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@prisma/client": "^6.9.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "class-validator": "^0.14.2",
     "reflect-metadata": "^0.2.2",
